# dodo_detector_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dodo_detector_ros.py  package.xml  setup.py
config/: main_config.yaml  people_config.yaml  people_filter.yaml
dodo_package/: CMakeLists.txt  package.xml
launch/: detect_camera.launch  detect_kinect.launch  detect_kinect2.launch  dodo_detector_people.launch  dodo_detector_ros.launch
msg/: DetectedObject.msg  DetectedObjectArray.msg
src/: detector.py  dodo_detector_ros.py
